# test-wagtail-s3

./: .gitignore  pyproject.toml  render.yaml
mysite/: storages.py
mysite/settings/: base.py  dev.py
scripts/: build.sh
